crates/monochange/tests/snapshots/github_releases__publish_github_release_dry_run_matches_snapshot@custom_sections.snap
---
source: crates/monochange/tests/github_releases.rs
expression: redacted
---
{
  "issue_comments": [],
  "manifest": {
    "changed_files": [
      "Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml"
    ],
    "changelogs": [
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "[multiline text]"
              ],
              "title": "Security"
            }
          ],
          "summary": [],
          "title": "core [1.0.1](https://github.com/ifiokjr/monochange/releases/tag/core/v1.0.1) ([DATE])"
        },
        "output": "default",
        "owner_id": "core",
        "owner_kind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "[multiline text]",
        "stream": "default"
      }
    ],
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actor_profiles": true,
            "commit_web_urls": true,
            "issue_comments": true,
            "related_issues": true,
            "review_request_lookup": true
          },
          "host": "github.com",
          "introduced": null,
          "last_updated": null,
          "provider": "github",
          "related_issues": []
        },
        "details": "Roll the signing key before the release window closes.",
        "path": ".changeset/security.md",
        "summary": "rotate signing keys",
        "targets": [
          {
            "bump": "patch",
            "change_type": "security",
            "evidence_refs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "command": "publish-release",
    "deleted_changesets": [],
    "dry_run": true,
    "group_version": null,
    "package_publications": [
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "core",
        "registry": "crates_io",
        "trusted_publishing": {
          "enabled": true,
          "environment": null,
          "mode": "required",
          "repository": null,
          "workflow": null
        },
        "version": "1.0.1"
      }
    ],
    "plan": {
      "compatibility_evidence": [],
      "decisions": [
        {
          "bump": "patch",
          "package": "cargo:crates/core/Cargo.toml",
          "planned_version": "1.0.1",
          "reasons": [
            "rotate signing keys"
          ],
          "trigger": "direct-change",
          "upstream_sources": [
            "cargo:crates/core/Cargo.toml"
          ]
        }
      ],
      "groups": [],
      "unresolved_items": [],
      "warnings": [],
      "workspace_root": "."
    },
    "release_targets": [
      {
        "id": "core",
        "kind": "package",
        "members": [
          "core"
        ],
        "release": true,
        "rendered_changelog_title": "core [1.0.1](https://github.com/ifiokjr/monochange/releases/tag/core/v1.0.1) ([DATE])",
        "rendered_title": "core v1.0.1 ([DATE])",
        "tag": true,
        "tag_name": "core/v1.0.1",
        "version": "1.0.1",
        "version_format": "namespaced"
      }
    ],
    "released_packages": [
      "workflow-core"
    ],
    "version": "1.0.1"
  },
  "package_publish": null,
  "publish_rate_limits": null,
  "release_commit": null,
  "release_request": null,
  "releases": [
    {
      "body": "[multiline text]",
      "draft": false,
      "generate_release_notes": false,
      "name": "core v1.0.1 ([DATE])",
      "owner": "ifiokjr",
      "prerelease": false,
      "provider": "github",
      "repo": "monochange",
      "repository": "ifiokjr/monochange",
      "tag_name": "core/v1.0.1",
      "target_id": "core",
      "target_kind": "package"
    }
  ]
}
