crates/monochange/tests/snapshots/github_releases__publish_github_release_dry_run_matches_snapshot@group.snap
---
source: crates/monochange/tests/github_releases.rs
expression: redacted
---
{
  "issue_comments": [],
  "manifest": {
    "changed_files": [
      "Cargo.toml",
      "changelog.md",
      "crates/app/Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml",
      "group.toml"
    ],
    "changelogs": [
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "[multiline text]"
              ],
              "title": "Features"
            }
          ],
          "summary": [
            "Grouped release for `sdk`."
          ],
          "title": "[1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) ([DATE])"
        },
        "output": "default",
        "owner_id": "sdk",
        "owner_kind": "group",
        "path": "changelog.md",
        "rendered": "[multiline text]",
        "stream": "default"
      },
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "- **add feature.**"
              ],
              "title": "Features"
            }
          ],
          "summary": [],
          "title": "[1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) ([DATE])"
        },
        "output": "default",
        "owner_id": "core",
        "owner_kind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "[multiline text]",
        "stream": "default"
      }
    ],
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actor_profiles": true,
            "commit_web_urls": true,
            "issue_comments": true,
            "related_issues": true,
            "review_request_lookup": true
          },
          "host": "github.com",
          "introduced": null,
          "last_updated": null,
          "provider": "github",
          "related_issues": []
        },
        "details": null,
        "path": ".changeset/feature.md",
        "summary": "add feature",
        "targets": [
          {
            "bump": "minor",
            "change_type": "minor",
            "evidence_refs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "command": "publish-release",
    "deleted_changesets": [],
    "dry_run": true,
    "group_version": "1.1.0",
    "package_publications": [
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "app",
        "registry": "crates_io",
        "trusted_publishing": {
          "enabled": true,
          "environment": null,
          "mode": "required",
          "repository": null,
          "workflow": null
        },
        "version": "1.1.0"
      },
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "core",
        "registry": "crates_io",
        "trusted_publishing": {
          "enabled": true,
          "environment": null,
          "mode": "required",
          "repository": null,
          "workflow": null
        },
        "version": "1.1.0"
      }
    ],
    "plan": {
      "compatibility_evidence": [],
      "decisions": [
        {
          "bump": "minor",
          "package": "cargo:crates/app/Cargo.toml",
          "planned_version": "1.1.0",
          "reasons": [
            "depends on `cargo:crates/core/Cargo.toml`",
            "shares version group `sdk`"
          ],
          "trigger": "version-group-synchronization",
          "upstream_sources": [
            "cargo:crates/core/Cargo.toml"
          ]
        },
        {
          "bump": "minor",
          "package": "cargo:crates/core/Cargo.toml",
          "planned_version": "1.1.0",
          "reasons": [
            "add feature",
            "shares version group `sdk`"
          ],
          "trigger": "direct-change",
          "upstream_sources": [
            "cargo:crates/core/Cargo.toml"
          ]
        }
      ],
      "groups": [
        {
          "bump": "minor",
          "id": "sdk",
          "members": [
            "cargo:crates/core/Cargo.toml",
            "cargo:crates/app/Cargo.toml"
          ],
          "planned_version": "1.1.0"
        }
      ],
      "unresolved_items": [],
      "warnings": [],
      "workspace_root": "."
    },
    "release_targets": [
      {
        "id": "sdk",
        "kind": "group",
        "members": [
          "core",
          "app"
        ],
        "release": true,
        "rendered_changelog_title": "[1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) ([DATE])",
        "rendered_title": "sdk v1.1.0 ([DATE])",
        "tag": true,
        "tag_name": "v1.1.0",
        "version": "1.1.0",
        "version_format": "primary"
      }
    ],
    "released_packages": [
      "workflow-app",
      "workflow-core"
    ],
    "version": "1.1.0"
  },
  "package_publish": null,
  "publish_rate_limits": null,
  "release_commit": null,
  "release_request": null,
  "releases": [
    {
      "body": "[multiline text]",
      "draft": false,
      "generate_release_notes": false,
      "name": "sdk v1.1.0 ([DATE])",
      "owner": "ifiokjr",
      "prerelease": false,
      "provider": "github",
      "repo": "monochange",
      "repository": "ifiokjr/monochange",
      "tag_name": "v1.1.0",
      "target_id": "sdk",
      "target_kind": "group"
    }
  ]
}
